# zc_flutter

./: .gitignore  .gitmodules  Makefile.toml  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/zc3/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: account.dart  main.dart  send.dart  store.dart  store.g.dart
native/zc_api_ffi/: Cargo.toml  binding.h  build.rs
native/zc_api_ffi/src/: account.rs  ffi.rs  init.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
